--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite --port 8080",
-    "build": "vite build",
-    "preview": "vite preview"
+    "build": "vite build ",
+    "preview": "vite preview --port 8080"
   },
   "dependencies": {
     "react": "^18.2.0",
