--- a/.env
+++ b/.env
@@ -3,4 +3,4 @@ VITE_ROL_X = "admin"
 VITE_ROL_Y= "empleado"
 VITE_CONFIRM = true
 VITE_NEGATIVE = false
-VITE_URL_API = "https://comapny-backend-production.up.railway.app/
+VITE_URL_API = "https://comapny-backend-production.up.railway.app/"
